tests/paczka1/small_fuzzy/18027726.err
Error in line 3: bdurc0wE8 S648 83,3
Error in line 14: ozn7MOBZ A817 54,7
